# apps/api/src/event-media/event-media.module.ts
@@ -1,0 +1,9 @@
+import { Module } from "@nestjs/common";
+import { EventMediaController } from "./event-media.controller";
+import { EventMediaService } from "./event-media.service";
+
+@Module({
+  controllers: [EventMediaController],
+  providers: [EventMediaService],
+})
+export class EventMediaModule {}
